Aligned Tech Tool text and fixed each to one line.

--- a/frontend/src/Routes/Tech/Tech.css
+++ b/frontend/src/Routes/Tech/Tech.css
@@ -16,7 +16,8 @@
 }
 
 .techWrap div p {
-    text-align: center;
+    text-align: left;
+    width: 175px;
 }
 
 .fadeIn1,
